--- a/index.html
+++ b/index.html
@@ -25,13 +25,20 @@
                             <h2>Prod. By Solomon Serry</h2>
                             <div class="time">
                                 <span id="current" >0:00</span>
+                                <span> / </span>
                                 <span id="duration" >0:00</span>
                             </div>
                         </div>
 
                         <div class="controls">
-                            <i class="fi fi-sr-play"></i>
-                            <!-- <i class="fi fi-sr-pause"></i> -->
+                            <div class="stop">
+                                <i class="fi fi-sr-stop" id="stop"></i>
+                            </div>
+                            
+                            <div class="playPause">
+                                <i class="fi fi-sr-play" id="playPause"></i>
+                            </div>
+
                         </div>
 
                     </div>
