changed color scheme and made final touches:fire::fire::fire:

--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto+Serif:wght@400;600&display=swap" rel="stylesheet">
-    <!-- <link rel='stylesheet' href='https://cdn-uicons.flaticon.com/uicons-solid-rounded/css/uicons-solid-rounded.css'> -->
     <link rel='stylesheet' href='https://cdn-uicons.flaticon.com/uicons-brands/css/uicons-brands.css'>
     <link rel='stylesheet' href='https://cdn-uicons.flaticon.com/uicons-bold-rounded/css/uicons-bold-rounded.css'>
     <link rel="stylesheet" href="styles.css">
@@ -18,6 +17,8 @@
     <main>
         <div class="background">
 
+            <!-- I appreciate all the help and ideas I got from resources I found on youtube.  I really wanna S/O 
+                    "Franks laboratory" for the goo background idea.  Please check him out, theres a lot of great content.-->
             <div class="particle"></div>
             <div class="particle"></div>
             <div class="particle"></div>
@@ -83,12 +84,20 @@
 
                 
                 <footer>
-                    <p>Created and Designed by Solomon Serry <i class="fi fi-br-copyright"></i> 2022</p>
+                    <p>Created and Designed by <a target="_blank" rel="noopener noreferrer" href="https://www.devsolo.ca/">Solomon Serry</a> <i class="fi fi-br-copyright"></i> 2022</p>
 
                     <div>
-                        <i class="fi fi-br-envelope"></i>
-                        <i class="fi fi-brands-linkedin"></i>
-                        <i class="fi fi-brands-github"></i>
+                        <a target="_blank" rel="noopener noreferrer" href="mailto:solo.serry@gmail.com">
+                            <i class="fi fi-br-envelope"></i>
+                        </a>
+
+                        <a target="_blank" rel="noopener noreferrer" href="https://www.linkedin.com/in/solomon-serry-the-developer/">
+                            <i class="fi fi-brands-linkedin"></i> 
+                        </a>
+
+                        <a target="_blank" rel="noopener noreferrer" href="https://github.com/SolomonSerry">
+                            <i class="fi fi-brands-github"></i>
+                        </a>
                     </div>
                 </footer>
             </div>
