--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link rel='stylesheet' href='https://cdn-uicons.flaticon.com/uicons-bold-rounded/css/uicons-bold-rounded.css'>
     <link rel="stylesheet" href="styles.css">
     <script src="https://unpkg.com/wavesurfer.js"></script>
-    <title>Getting Wavy</title>
+    <title>🌊Getting Wavy🌊</title>
 </head>
 <body>
     <main>
@@ -69,6 +69,7 @@
                             </div>
                             
                         </div>
+                        <!-- Thanks to wavesurfer I was able to get this soundcloud kinda vibe by added a waveform to my song, hence why this project is called getting wavy🌊 -->
                         <div id="waveform"></div>
                     </div>
                     
