added meta properties

--- a/index.html
+++ b/index.html
@@ -9,6 +9,13 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto+Serif:wght@400;600&display=swap" rel="stylesheet">
     <link rel='stylesheet' href='https://cdn-uicons.flaticon.com/uicons-brands/css/uicons-brands.css'>
     <link rel='stylesheet' href='https://cdn-uicons.flaticon.com/uicons-bold-rounded/css/uicons-bold-rounded.css'>
+
+    <meta property="og:title" content="Getting wavy with waveforms 🌊">
+    <meta property="og:description" content="Created a media player to house a song I created and used a waveform to give it a soundcloud vibe">
+    <meta property="og:type" content="Media Player">
+    <meta property="og:url" content="https://working-it-wavy.netlify.app/">
+    <meta property="og:image" content="https://working-it-wavy.netlify.app/assets/ImpressionableDevotedHarpyeagle-size_restricted.gif" />
+
     <link rel="stylesheet" href="styles.css">
     <script src="https://unpkg.com/wavesurfer.js"></script>
     <title>🌊Getting Wavy🌊</title>
