--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <meta property="og:description" content="Created a media player to house a song I created and used a waveform to give it a soundcloud vibe">
     <meta property="og:type" content="Media Player">
     <meta property="og:url" content="https://working-it-wavy.netlify.app/">
-    <meta property="og:image" content="https://thumbs.gfycat.com/ImpressionableDevotedHarpyeagle-size_restricted.gif" />
+    <meta property="og:image" content="https://working-it-wavy.netlify.app/go-ligety-hed-2014.jpg.webp" />
 
     <link rel="stylesheet" href="styles.css">
     <script src="https://unpkg.com/wavesurfer.js"></script>
