--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
     <link rel='stylesheet' href='https://cdn-uicons.flaticon.com/uicons-bold-rounded/css/uicons-bold-rounded.css'>
 
     <meta property="og:title" content="Getting wavy with waveforms">
-    <meta property="og:description" content="Created a media player to house a song I created and used a waveform to give it a soundcloud vibe">
+    <meta property="og:description" content="Created an JS app to house a song I created during my time at Juno College of Technology and used a waveform to give this site a soundcloud feel.">
     <meta property="og:type" content="Media Player">
     <meta property="og:url" content="https://working-it-wavy.netlify.app/">
-    <meta property="og:image" content="https://working-it-wavy.netlify.app/go-ligety-hed-2014.jpg.webp" />
+    <meta property="og:image" content="https://working-it-wavy.netlify.app/assets/go-ligety-hed-2014.jpg.webp" />
 
     <link rel="stylesheet" href="styles.css">
     <script src="https://unpkg.com/wavesurfer.js"></script>
