switched image on og tag again

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <meta property="og:description" content="Created an JS app to house a song I created during my time at Juno College of Technology and used a waveform to give this site a soundcloud feel.">
     <meta property="og:type" content="Media Player">
     <meta property="og:url" content="https://working-it-wavy.netlify.app/">
-    <meta property="og:image" content="https://working-it-wavy.netlify.app/assets/go-ligety-hed-2014.jpg.webp" />
+    <meta property="og:image" content="https://working-it-wavy.netlify.app/assets/ImpressionableDevotedHarpyeagle-size_restricted.gif" />
 
     <link rel="stylesheet" href="styles.css">
     <script src="https://unpkg.com/wavesurfer.js"></script>
