correcting spelling error

--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
                 <div class="description">
                     <p>Hip hop sample based beat created using Native Instruments Maschine and Serato Sample.  All samples were chopped from the song 'No Diggity' by the ledgendary R&B group Black Street.</p>
 
-                    <p class="question">Is this track fire🔥🔥🔥s???</p>
+                    <p class="question">Is this track fire🔥🔥🔥???</p>
 
                     <img class="contentImage" src="/assets/il_570xN.1594607960_mo4r.webp" alt="">
                 </div>
